fix button align and colors

--- a/css/glowingbear.css
+++ b/css/glowingbear.css
@@ -58,6 +58,10 @@ td.message {
     border-bottom: 2px solid #555;
 }
 
+.input-group-addon, .input-group-btn {
+    vertical-align: top;
+}
+
 .footer button {
     border-radius: 0;
 }
